--- a/LinuxMCBot/requirements.txt
+++ b/LinuxMCBot/requirements.txt
@@ -3,6 +3,8 @@ aiosignal==1.3.1
 async-timeout==4.0.3
 asyncio-dgram==2.1.2
 attrs==23.2.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
 dnspython==2.6.1
 frozenlist==1.4.1
 idna==3.6
@@ -10,5 +12,7 @@ mcstatus==11.1.1
 multidict==6.0.5
 psutil==5.9.8
 py-cord==2.5.0
+requests==2.32.5
 typing_extensions==4.11.0
+urllib3==2.6.3
 yarl==1.9.4
